# snampo

./: .coderabbit.yml  .cursorignore  .cursorrules  .gitignore  .mise.toml  .pre-commit-config.yaml  .secrets.baseline  .yamllint  CLAUDE.md  PR_103_REVIEW.md  README.md  codemagic.yaml  cspell.json  openapi-generator-config.yaml
.cursor/commands/: commit.md  pr.md
.cursor/rules/: dart.mdc  python.mdc  snampo_api.mdc  style.mdc  terraform.mdc  yaml.mdc
.github/: CODEOWNERS  auto_assign.yml  dependabot.yml  issue-mission-history-first-install-race.md  pr-218-body-temp.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: auto-assign-pr.yml  cd-backend.yml  cd-frontend.yml  ci-backend.yml  ci-frontend.yml  ci.yml  release.yml  terraform-cd.yml  terraform-ci.yml  terraform-diff-check.yml
backend/: .env.example  .gitignore  Dockerfile  docker-compose.yml  openapi.json  pyproject.toml  requirements.txt  route.html
backend/app/: config.py  container.py  main.py  models.py  value_objects.py
backend/app/adapters/: __init__.py
backend/app/adapters/api/: __init__.py  openapi.py
backend/app/adapters/api/routes/: __init__.py  route.py  streetview.py
backend/app/adapters/api/schemas/: __init__.py  route.py  street_view.py
backend/app/adapters/client_interfaces/: __init__.py  google_maps_client_if.py
backend/app/adapters/gateways/: __init__.py  google_maps_gateway_impl.py
backend/app/api/: __init__.py  openapi.py
backend/app/api/routes/: route.py  streetview.py
backend/app/api/schemas/: __init__.py  route.py  street_view.py
backend/app/application/: __init__.py
backend/app/application/dto/: __init__.py  route_dto.py  street_view_dto.py
backend/app/application/gateway_interfaces/: __init__.py  google_maps_gateway.py  google_maps_gateway_if.py
backend/app/application/ports/: __init__.py  google_maps_gateway.py
backend/app/application/services/: __init__.py  landmark_image_selection_service.py  landmark_search_service.py  street_view_image_fetch_service.py  street_view_service.py
backend/app/application/usecases/: __init__.py  generate_route_usecase.py  get_street_view_image_usecase.py  route_result_dto.py
backend/app/domain/: __init__.py
backend/app/domain/exceptions/: __init__.py  external_service.py  route.py
backend/app/domain/services/: __init__.py  coordinate_service.py  landmark_service.py  mission_point_calculation_service.py  mission_point_calculator.py  route_service.py
backend/app/domain/value_objects/: __init__.py  coordinate.py  image_height.py  image_size.py  image_width.py  landmark.py  latitude.py  longitude.py  street_view_image.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/clients/: __init__.py  google_maps_client_impl.py
backend/app/infrastructure/gateways/: __init__.py  google_maps_gateway_impl.py
backend/app/infrastructure/mappers/: __init__.py  polyline_mapper.py
backend/app/services/: google_maps_service.py  route_service.py
backend/app/utils/: geometry.py
backend/scripts/: generate_openapi.py  probe_apple_maps_api.py
backend/tests/: conftest.py
backend/tests/app/adapters/: __init__.py
backend/tests/app/adapters/gateways/: __init__.py  test_google_maps_gateway_adapter.py
backend/tests/app/application/usecases/: test_generate_route_usecase.py
backend/tests/app/domain/services/: test_coordinate_service.py  test_landmark_service.py  test_mission_point_calculation_service.py  test_route_service.py
backend/tests/app/domain/value_objects/: test_coordinate.py  test_image_size.py  test_landmark.py  test_latitude.py  test_longitude.py  test_street_view_image.py
backend/tests/app/infrastructure/gateways/: test_google_maps_gateway.py  test_google_maps_gateway_cache.py  test_google_maps_gateway_impl.py
backend/tests/app/infrastructure/mappers/: __init__.py  test_polyline_mapper.py
docs/: frontend-architecture.md  setup.md
frontend/: .env.example  .mise.toml  .tool-versions  README.md  analysis_options.yaml  pubspec.yaml
frontend/android/: .gitignore  build.gradle  gradle.properties  secret.properties.example  settings.gradle
frontend/ios/: .gitignore  ExportOptions.plist  Podfile
frontend/lib/: app.dart  config.dart  location_model.dart  location_model.freezed.dart  location_model.g.dart  main.dart  (+5 more)
functions/: pyproject.toml
functions/budget-notifier/: main.py  requirements.txt
scripts/: check-api.sh  generate-api.sh  run_bash_script.py
terraform/: README.md
(+186 files in other folders)
